--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 	<h1>Feedback Form</h1>
 	<form method="post">
 		<label for="name">Name</label>
-		<input type="text"id="name"maxlength="3"maxlength="50"required>
+		<input type="text" id="name" maxlength="3" maxlength="50" required>
 		<label for="portfolio">Portfolio</label>
-		<input type="url"id="portfolio"required>
-		<label for="favColor">Favorite Color</label>
-		<input type="color" id="favColor"required>
+		<input type="url" id="portfolio" required>
+		<label for="favColor">Favourite Color</label>
+		<input type="color" id="favColor" >
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100" required>
 		
