--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<label for="portfolio">Portfolio</label>
 		<input type="url" id="portfolio" required>
 		<label for="favColor">Favourite Color</label>
-		<input type="color" id="favColor" >
+		<input type="color" id="favColor" required >
 		<label for="likeness">Likeness</label>
 		<input type="range" id="likeness" min="1" max="100" required>
 		
